--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# vscode
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -60,6 +63,8 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+/static
+/media
 
 # Flask stuff:
 instance/
